--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "UsamaMalik7/usama_project",
+  "name": "usama-malik7/usama_project",
   "description": "A simple hello world composer package",
   "type": "library",
   "license": "MIT",
@@ -11,7 +11,7 @@
   ],
   "minimum-stability": "stable",
   "autoload": {
-    "psr-4": {"UsamaMalik7\\usama_project\\": "src/"}
+    "psr-4": {"usama-malik7\\usama_project\\": "src/"}
   },
   "require": {}
 }
