--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "minimum-stability": "stable",
   "autoload": {
-    "psr-4": {"usama-malik7\\usama_project\\": "src/"}
+    "psr-4": {"usamamalik7\\HelloWorld\\": "src/"}
   },
   "require": {}
 }
